1.19-5.1.1:
- Added facade to the creative tab
- Fixed a server-side crash with facades on 1.19.3. Make sure to update McJtyLib too

1.19-5.1.0:
- Updated to Latest McJtyLib and made compatible with 1.19.3

1.19-5.0.2:
- Bugfix by StevenDoesStuffs so that the filter on fluid extraction works again

1.19-5.0.1:
- You can again change the side of an advanced connector (in the gui)

1.19-5.0.0:
- Port to 1.19

1.18-4.0.5:
- Port to 1.18.2

1.18-4.0.4:
- Copy/paste will now use a more compact json so that more can be copied before hitting the limit
- New system to automatically split the copy/paste packet from client to server in case of huge networks. Can be disabled by setting the client config controllerMaxPaste to a value like 28000

1.18-4.0.3:
- Fixed a problem with items not getting restored when breaking and placing blocks

1.18-4.0.2:
- Fixed a problem with XNet networks not working below 0. Networks should be automatically upgraded to being below 0 compatible

1.18-4.0.1:
- Updates for McJtyLib and fixes

1.18-4.0.0:
- First release of XNet for 1.18

1.16-3.0.15:
- Updated to latest version of McJtyLib

1.16-3.0.14:
- Updated to latest version of McJtyLib

1.16-3.0.13:
- XNet cables and connectors can now be waterlogged and cables no longer break in water

1.16-3.0.12:
- Fix the item model for the yellow connector

1.16-3.0.11:
- Fixed the recipe for the connector upgrade

1.16-3.0.10:
- Fixed cables in creative tab
- Added back support for the XNet api
- Fixed a potential crash in facades
- Wireless router works again
- Disabling a connector will now immediatelly cause a visual update
- Fixed recipes and added recipe for connector upgrade kit
- The connector upgrade kit works again

1.16-3.0.9:
- Fixed a potential crash when placing a connector next to a hopper

1.16-3.0.8:
- Clipboard support in the controller is working again

1.16-3.0.7:
- Update to latest McJtyLib

1.16-3.0.6-beta:
- Fixed a problem on servers

1.16-3.0.5-beta: