@@ -1,3 +1,6 @@
+Upcoming:
+- Big improvements to the routing and wireless routing in general. It should now start and stop much quicker if something changes and it will also respect the fact that a channel is disabled
+
 1.19-5.1.1:
 - Added facade to the creative tab
 - Fixed a server-side crash with facades on 1.19.3. Make sure to update McJtyLib too
